--- a/Access/Css/style.css
+++ b/Access/Css/style.css
@@ -11,3 +11,107 @@ body {
   font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
 }
+
+/* =============== common(thuộc tính chung) ===============*/
+
+a {
+  text-decoration: none;
+}
+
+.main-content {
+  width: 1170px;
+  max-width: calc(100% - 48px);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* =============== header ===============*/
+.header {
+  color: #fff;
+}
+
+.header.fixed {
+  position: sticky;
+  top: -28px;
+}
+.header .body-header {
+  display: flex;
+  align-items: center;
+  padding: 36px 0 8px;
+}
+
+.nav ul {
+  display: flex;
+}
+
+.nav {
+  margin-left: auto;
+}
+
+.body-header .logo {
+  width: 208px;
+  height: 54px;
+}
+
+.nav ul .DK {
+  width: 25px;
+  height: 14px;
+}
+
+.nav ul .DN {
+  width: 25px;
+  height: 14px;
+}
+
+.nav a {
+  color: #333333;
+  font-size: 1.6rem;
+  text-align: center;
+  padding: 8px 21px;
+}
+
+.nav a:hover {
+  color: #ee0000;
+  /* font-weight: 600; */
+  text-shadow: 1 0 0 currentColor;
+}
+
+.body-header .se .search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.body-header .se .search .searchTerm {
+  width: 100%;
+  border: 3px solid black;
+  border-right: none;
+  padding: 1.5rem;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #fff;
+}
+
+.body-header .se .search .searchTerm:focus {
+  color: black;
+}
+
+.se .search .searchButton {
+  width: 100px;
+  height: 35px;
+  border: 1px solid black;
+  background-color: black;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 1.6rem;
+}
+
+.body-header .se {
+  width: 30%;
+  position: absolute;
+  top: 65%;
+  left: 45%;
+  transform: translate(-50%, -50%);
+}
