--- a/Access/Css/style.css
+++ b/Access/Css/style.css
@@ -24,7 +24,14 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
-
+.heading-lv2 {
+  color: black;
+  font-size: 3.3rem;
+  font-weight: 700;
+  line-height: 1.27;
+  letter-spacing: -0.76px;
+  text-align: center;
+}
 /* =============== header ===============*/
 .header {
   color: #fff;
@@ -84,7 +91,7 @@ a {
 
 .body-header .se .search .searchTerm {
   width: 100%;
-  border: 3px solid black;
+  border: 3px solid #e6e6e6;
   border-right: none;
   padding: 1.5rem;
   height: 20px;
@@ -100,8 +107,8 @@ a {
 .se .search .searchButton {
   width: 100px;
   height: 35px;
-  border: 1px solid black;
-  background-color: black;
+  border: 1px solid #e6e6e6;
+  background-color: #e6e6e6;
   color: #fff;
   border-radius: 0 5px 5px 0;
   cursor: pointer;
@@ -114,4 +121,12 @@ a {
   top: 65%;
   left: 45%;
   transform: translate(-50%, -50%);
+}
+
+/* =============== main ===============*/
+/* =============== Sach_moi ===============*/
+.new {
+  padding: 15px 0;
+  /* background: blue; */
+  margin-top: 47px;
 }
