--- a/Access/Css/style.css
+++ b/Access/Css/style.css
@@ -38,6 +38,7 @@ a {
 }
 
 .header.fixed {
+  z-index: 1;
   position: sticky;
   top: -28px;
 }
@@ -45,6 +46,7 @@ a {
   display: flex;
   align-items: center;
   padding: 36px 0 8px;
+  background: #fffff7;
 }
 
 .nav ul {
@@ -129,4 +131,70 @@ a {
   padding: 15px 0;
   /* background: blue; */
   margin-top: 47px;
+}
+
+/* =============== Thêm sách ===============*/
+.new {
+  background: #fffff7;
+}
+.new .book-sale {
+  gap: 20px;
+  margin-top: 25px;
+  display: flex;
+}
+
+.new .book-item:hover {
+  border-radius: 12px;
+  border: 1px solid #fffff7;
+  box-shadow: 0 18px 36px 0 rgba(14, 13, 13, 0.077);
+}
+.new .book-item .thumb {
+  width: 100%;
+  height: 275px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+.new .book-item {
+  border-radius: 12px;
+  border: 1px solid #fffff7;
+  background: #fff;
+}
+
+.new .book-item .info {
+  padding: 16px 22px 22px;
+}
+
+.new .book-item .foot {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+
+.book-sale .book-item {
+  position: relative;
+}
+
+.sale .sale_number {
+  font-size: 25px;
+  padding: 0.5rem;
+  background: red;
+  color: #fff;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  top: 2px;
+  left: 119px;
+}
+.price.none_sale p {
+  text-decoration: line-through;
+}
+.more .xemthem a {
+  color: red;
+  float: right;
+}
+
+.more .xemthem a:hover {
+  color: #fe5c5c;
 }
