--- a/Access/Css/style.css
+++ b/Access/Css/style.css
@@ -189,14 +189,16 @@ a {
 }
 
 .sale .sale_number {
-  font-size: 23px;
+  font-size: 16px;
   padding: 0.4rem;
   background: red;
   color: #fff;
   border-radius: 50%;
   display: inline-block;
   position: absolute;
-  top: 2px;
+  height: 28px;
+  width: 40px;
+  top: 0px;
   right: 0;
 }
 
@@ -207,4 +209,13 @@ a {
 
 .more .xemthem a:hover {
   color: #fe5c5c;
+}
+
+/* =============== Slogan ===============*/
+.slogan {
+  margin-top: 30px;
+}
+
+.slogan .slg img {
+  width: 100%;
 }
