--- a/Access/Css/style.css
+++ b/Access/Css/style.css
@@ -229,3 +229,27 @@ a {
   width: 100%;
   height: 120px;
 }
+
+/* =============== footer ===============*/
+
+.footer {
+  margin-top: 50px;
+  background: #fffff7;
+}
+
+.footer .row {
+  display: flex;
+}
+
+.column.column-lv2 {
+  margin-left: 50rem;
+}
+
+.title.title-lv2 {
+  font-size: 20px;
+}
+
+.fa-brands.fa-facebook {
+  color: #0866ff;
+  font-size: 30px;
+}
