--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -228,6 +228,7 @@ a {
 .slogan .slg img {
   width: 100%;
   height: 120px;
+  object-fit: cover;
 }
 
 /* =============== footer ===============*/
